--- a/isa-blog/src/style.css
+++ b/isa-blog/src/style.css
@@ -1,7 +1,7 @@
 body{
     color: #4F5054;
     font-family: "Nunito";
-    background-image: url("./images/texture.jpg");
+    /* background-image: url("./images/texture.jpg"); */
     /* background-position: center; */
     background-size: cover;
 }
