--- a/isa-blog/src/components/Navbar/Navbar.module.css
+++ b/isa-blog/src/components/Navbar/Navbar.module.css
@@ -1,25 +1,24 @@
 .container {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    /* height: 100px; */
-    left: 0;
-    top: 0;
-    z-index: 9994;
-    background-color: #fff;
-    transform: translateZ(0);
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .hiddenContainer {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background: rgba(22, 24, 29, 0.3);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    height: 100%;
-    position: absolute;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background: #F3F5F7;
+
+  z-index: 9994;
+  transform: translateZ(0);
+  align-items: center;
+}
+
+.hiddenContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  height: 100%;
+  position: absolute;
+}
